# splitfed

./: .gitignore  AI_PIPELINE_TRAIN_EVAL_FULL_RECORD.md  extract_paper2601_131_static_features.py  extract_split_ast_131_static_features.py  paper2601_controlled_fusion_cli.py  paper2601_eval_eent_val_threshold.py  paper2601_eval_eent_val_threshold_all.sh  paper2601_eval_svd_independent_scaling.py  paper2601_eval_youden_all_static.sh  paper2601_make_domain_shift_report.py  paper2601_make_results_report.py  paper2601_make_stable_static_table.py  paper2601_results_report.html  paper2601_run_controlled_static_mae_experiments.sh  paper2601_run_domain_shift_reports.sh  paper2601_run_full_pipeline.sh  paper2601_run_full_pipeline_local1.sh  paper2601_run_pathology_static_ablation.sh  paper2601_run_ssast_like_finetune.sh  paper2601_run_stable_static_experiment.sh  paper2601_splitmae_README.md  paper2601_splitmae_cli.py  paper2601_splitmae_client.py  paper2601_splitmae_server.py  paper2601_splitmae_smoke.py  paper2601_splitmae_training.py  paper2601_splitmae_utils.py  paper2601_ssast_like_finetune_cli.py  paper2601_standard_ast.py  paper2601_static_features.py  pyproject.toml  run_split_ast_audio_primary_static_aux.sh  setup_env.sh  split_ast_controlled_fusion_cli.py  split_ast_eval_eent_val_threshold.py  split_ast_mae_cli.py  split_ast_mae_client.py  split_ast_mae_server.py  split_ast_mae_training.py  split_ast_mae_utils.py  (+5 more)
docs/: RUNBOOK.md
scripts/: _path_setup.py  cleanup_generated_untracked.sh  eval_launcher.py  evaluate.py  final_pipeline.py  print_eval_results.py  train.py
(+51 files in other folders)
